--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   animated_text_kit: ^2.0.0
+  modal_progress_hud: ^0.1.3
   firebase_core: ^0.4.3+1
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
